--- a/.gitignore
+++ b/.gitignore
@@ -1,68 +1,12 @@
-# Virtual Environment
-.venv/
-venv/
-env/
-ENV/
-
-# Python
 __pycache__/
 *.py[cod]
 *$py.class
-*.so
-.Python
-build/
-develop-eggs/
-dist/
-downloads/
-eggs/
-.eggs/
-lib/
-lib64/
-parts/
-sdist/
-var/
-wheels/
-pip-wheel-metadata/
-share/python-wheels/
-*.egg-info/
-.installed.cfg
-*.egg
-MANIFEST
 
-# IDE
-.vscode/
-.idea/
-*.swp
-*.swo
-*~
+venv/
+env/
 
-# Database
+# Keep local config with secrets out of the repo
+config.py
+
 *.db
-*.sqlite
-*.sqlite3
-database/news_fallback.db
-
-# Environment variables
-.env
-.env.local
-.env.*.local
-
-# Config (optional - only if it contains passwords)
-# Uncomment if you want to exclude config.py
-# config.py
-
-# OS
 .DS_Store
-Thumbs.db
-
-# Testing
-.pytest_cache/
-.coverage
-htmlcov/
-
-# Logs
-*.log
-
-# Temporary files
-*.tmp
-*.bak
